// =====================================================================
// UniMove ERD — OVERVIEW (toàn bộ 21 bảng)
// Paste toàn bộ file này vào https://dbdiagram.io → diagram tự render
// Export PNG / PDF / SVG ở góc phải trên dbdiagram
// =====================================================================

// ----- ENUMS -----
Enum user_role {
  customer
  provider
  admin
}

Enum user_status {
  active
  banned
  pending
}

Enum verify_status {
  pending
  approved
  rejected
  resubmit
}

Enum document_type {
  cccd_front
  cccd_back
  driver_license
  vehicle_registration
  vehicle_photo
}

Enum vehicle_type {
  motorbike
  van_500kg
  van_1000kg
  truck_1500kg
  truck_2500kg
}

Enum order_status {
  pending
  accepted
  provider_arriving
  in_progress
  completed
  cancelled
  disputed
}

Enum payment_type {
  deposit
  final
  refund
}

Enum payment_status {
  pending
  paid
  failed
  refunded
}

Enum payment_method {
  payos
  qr
  cash
}

Enum notification_type {
  order
  chat
  payment
  system
  promotion
}

Enum dispute_status {
  open
  investigating
  resolved
  rejected
}


// ===== 1. AUTH & USER =====
Table users {
  id              uuid [pk]
  email           varchar [unique, not null]
  phone           varchar [unique]
  password_hash   varchar [not null]
  full_name       varchar [not null]
  avatar_url      text
  role            user_role [not null]
  status          user_status [not null]
  google_id       varchar [unique]
  email_verified  boolean
  last_login_at   timestamptz
  created_at      timestamptz
  updated_at      timestamptz
}

Table refresh_tokens {
  id          uuid [pk]
  user_id     uuid [ref: > users.id]
  token_hash  varchar [not null]
  device_info text
  expires_at  timestamptz [not null]
  revoked_at  timestamptz
  created_at  timestamptz
}

Table device_tokens {
  id         uuid [pk]
  user_id    uuid [ref: > users.id]
  fcm_token  text [not null]
  platform   varchar
  created_at timestamptz
}

Table customers {
  user_id         uuid [pk, ref: - users.id]
  default_address text
  default_lat     double
  default_lng     double
  total_orders    integer
  created_at      timestamptz
}


// ===== 2. PROVIDER & SERVICE =====
Table providers {
  user_id             uuid [pk, ref: - users.id]
  verify_status       verify_status
  verified_at         timestamptz
  verified_by         uuid [ref: > users.id]
  reject_reason       text
  vehicle_type        vehicle_type [not null]
  vehicle_plate       varchar [unique, not null]
  vehicle_brand       varchar
  vehicle_model       varchar
  vehicle_year        integer
  vehicle_capacity_kg integer
  bio                 text
  rating_avg          decimal
  rating_count        integer
  total_orders        integer
  total_earnings      decimal
  is_online           boolean
  current_lat         double
  current_lng         double
  last_active_at      timestamptz
  created_at          timestamptz
  updated_at          timestamptz
}

Table provider_documents {
  id            uuid [pk]
  provider_id   uuid [ref: > providers.user_id]
  doc_type      document_type [not null]
  file_url      text [not null]
  cloudinary_id varchar
  uploaded_at   timestamptz
}

Table service_packages {
  id               uuid [pk]
  provider_id      uuid [ref: > providers.user_id]
  name             varchar [not null]
  description      text
  base_price       decimal [not null]
  price_per_km     decimal
  min_distance_km  decimal
  max_distance_km  decimal
  helper_included  boolean
  is_active        boolean
  created_at       timestamptz
  updated_at       timestamptz
}

Table service_areas {
  id          uuid [pk]
  provider_id uuid [ref: > providers.user_id]
  city        varchar [not null]
  district    varchar
  created_at  timestamptz
}


// ===== 3. ORDER =====
Table orders {
  id                 uuid [pk]
  order_code         varchar [unique, not null]
  customer_id        uuid [ref: > customers.user_id]
  provider_id        uuid [ref: > providers.user_id]
  service_package_id uuid [ref: > service_packages.id]
  pickup_address     text [not null]
  pickup_lat         double [not null]
  pickup_lng         double [not null]
  dropoff_address    text [not null]
  dropoff_lat        double [not null]
  dropoff_lng        double [not null]
  distance_km        decimal
  scheduled_at       timestamptz [not null]
  accepted_at        timestamptz
  started_at         timestamptz
  completed_at       timestamptz
  cancelled_at       timestamptz
  cancel_reason      text
  cancelled_by       uuid [ref: > users.id]
  base_amount        decimal [not null]
  extra_fee          decimal
  total_amount       decimal [not null]
  deposit_amount     decimal
  platform_fee       decimal
  provider_earnings  decimal
  customer_note      text
  status             order_status [not null]
  created_at         timestamptz
  updated_at         timestamptz
}

Table order_items {
  id         uuid [pk]
  order_id   uuid [ref: > orders.id]
  item_name  varchar [not null]
  quantity   integer
  note       text
  created_at timestamptz
}

Table order_status_history {
  id         uuid [pk]
  order_id   uuid [ref: > orders.id]
  status     order_status [not null]
  changed_by uuid [ref: > users.id]
  note       text
  created_at timestamptz
}


// ===== 4. PAYMENT =====
Table payments {
  id                 uuid [pk]
  order_id           uuid [ref: > orders.id]
  payment_type       payment_type [not null]
  method             payment_method [not null]
  amount             decimal [not null]
  status             payment_status [not null]
  payos_order_code   bigint [unique]
  payos_payment_id   varchar
  payos_checkout_url text
  payos_qr_code      text
  paid_at            timestamptz
  failure_reason     text
  refunded_amount    decimal
  refund_reason      text
  refunded_by        uuid [ref: > users.id]
  created_at         timestamptz
  updated_at         timestamptz
}


// ===== 5. REALTIME (CHAT + TRACKING) =====
Table location_pings {
  id          bigint [pk, increment]
  order_id    uuid [ref: > orders.id]
  provider_id uuid [ref: > providers.user_id]
  lat         double [not null]
  lng         double [not null]
  speed_kmh   real
  heading     real
  recorded_at timestamptz
}

Table conversations {
  id              uuid [pk]
  order_id        uuid [unique, ref: - orders.id]
  customer_id     uuid [ref: > customers.user_id]
  provider_id     uuid [ref: > providers.user_id]
  last_message_at timestamptz
  created_at      timestamptz
}

Table messages {
  id              uuid [pk]
  conversation_id uuid [ref: > conversations.id]
  sender_id       uuid [ref: > users.id]
  content         text
  image_url       text
  is_read         boolean
  created_at      timestamptz
}


// ===== 6. REVIEW / DISPUTE / NOTIFICATION / ADMIN =====
Table reviews {
  id          uuid [pk]
  order_id    uuid [unique, ref: - orders.id]
  customer_id uuid [ref: > customers.user_id]
  provider_id uuid [ref: > providers.user_id]
  rating      smallint [not null]
  comment     text
  is_hidden   boolean
  created_at  timestamptz
  updated_at  timestamptz
}

Table disputes {
  id            uuid [pk]
  order_id      uuid [ref: > orders.id]
  raised_by     uuid [ref: > users.id]
  reason        varchar [not null]
  description   text [not null]
  evidence_urls "text[]"
  status        dispute_status
  resolution    text
  resolved_by   uuid [ref: > users.id]
  resolved_at   timestamptz
  created_at    timestamptz
  updated_at    timestamptz
}

Table notifications {
  id         uuid [pk]
  user_id    uuid [ref: > users.id]
  type       notification_type [not null]
  title      varchar [not null]
  body       text
  data       jsonb
  is_read    boolean
  created_at timestamptz
}

Table broadcasts {
  id          uuid [pk]
  title       varchar [not null]
  body        text [not null]
  target_role user_role
  sent_by     uuid [ref: > users.id]
  sent_at     timestamptz
}

Table banners {
  id         uuid [pk]
  title      varchar
  image_url  text [not null]
  link_url   text
  position   integer
  is_active  boolean
  start_at   timestamptz
  end_at     timestamptz
  created_by uuid [ref: > users.id]
  created_at timestamptz
}

Table admin_logs {
  id           bigint [pk, increment]
  admin_id     uuid [ref: > users.id]
  action       varchar [not null]
  target_table varchar
  target_id    uuid
  payload      jsonb
  ip_address   varchar
  created_at   timestamptz
}


// ===== TABLE GROUPS (tô màu theo nhóm cho dễ nhìn) =====
TableGroup "1. Auth & User" {
  users
  refresh_tokens
  device_tokens
  customers
}

TableGroup "2. Provider & Service" {
  providers
  provider_documents
  service_packages
  service_areas
}

TableGroup "3. Order" {
  orders
  order_items
  order_status_history
}

TableGroup "4. Payment" {
  payments
}

TableGroup "5. Realtime (Chat + Tracking)" {
  location_pings
  conversations
  messages
}

TableGroup "6. Review / Dispute / Notification / Admin" {
  reviews
  disputes
  notifications
  broadcasts
  banners
  admin_logs
}
